test(it): point files container at quarkus-migration image
Retarget the CeStackTestResource IT harness from
carbonio-files-ce:devel (pre-Quarkus, no /internal surface) to
carbonio-files-ce:quarkus-migration (Quarkus native, exposes the
/internal REST API the migrated FilesInternalClient now calls).

Key harness changes:
- Image: carbonio-files-ce:devel → carbonio-files-ce:quarkus-migration
- Container config: CARBONIO_* env → NETWORKING_CONFIG_* (extensions chain)
- Add CONSUL_HTTP_TOKEN and NETWORKING_CONFIG_CARBONIO_FILES_ENABLE_NOTIFICATIONS=false
- Add env for PREVIEW, DOCS_CONNECTOR, MESSAGE_BROKER deps (all pointing at WireMock)
- Health wait: /health/live (204) → /q/health/live (200, Quarkus standard)
- Drop JAVA_TOOL_OPTIONS=--enable-preview (pre-Quarkus JVM workaround, not needed for native)
- Add carbonio-preview, carbonio-message-broker, carbonio-docs-connector WireMock aliases
- Consul KV root recursive stub now carries carbonio-files/database/credentials/* entries
  alongside the existing docs-connector keys; the bootstrap-database extension in the
  quarkus-migration image reads credentials from this sub-path at boot
- Also extend the carbonio-files/ prefix stub with the database/credentials/ entries

Also fix two FilesResourceTest unit tests broken by the SDK migration:
uploadTemplate signature changed from (cookie, insertFile) to (requesterId, insertFile);
update the two stubs that were matching on eq(COOKIE) to eq(REQUESTER_ID).

DocsConnectorCeIT: 23/23 pass. Unit suite: 114/114 pass.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>